--- a/src/css/personal_cre_header.css
+++ b/src/css/personal_cre_header.css
@@ -2,12 +2,16 @@
 
 header {
   width: 100vw;
-
+  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
   nav{
+    width: 90vw !important;
+    margin-left: auto;
+    margin-right: auto;
     .navbar-brand{
       display: flex;
       align-items: center;
       img{
+        width: 3rem;
         margin-right: 1rem;
       }
     }
