--- a/src/views/personal_cre.html
+++ b/src/views/personal_cre.html
@@ -1,54 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="../css/personal_cre_desktop.css"
-      media="screen and (min-width: 769px)"
-    />
-    <link
-      rel="stylesheet"
-      href="../css/personal_cre_mobile.css"
-      media="screen and (max-width: 768px)"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="" />
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Cuenta Suministrador | ElectroCRE</title>
+    <link rel="stylesheet" href="../css/personal_cre_header.css" />
+
+    <link rel="stylesheet" href="../css/personal_cre_desktop.css" />
+
+    <title>Personal CRE</title>
   </head>
+
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="">Propietarios</a></li>
-          <li><a href="">Suministradores</a></li>
-          <li><a href="">Registros</a></li>
-        </ul>
-      </nav>
-      <span></span>
+      <nav
+        class="navbar navbar-expand-sm navbar-light bg-light"
+        aria-label="Third navbar example"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="../../public/images/logo_electrocre.png"
+              alt=""
+              srcset=""
+              width="30px"
+            />ElectroCRE</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarsExample03"
+            aria-controls="navbarsExample03"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-      <section class="navSeguidor">
-        <a href="./personal_cre.html"
-          ><img src="../../public/images/house__gray.svg" alt="" srcset="" /> Inicio
-          </a
-        >
-      </section>
+          <div class="collapse navbar-collapse" id="navbarsExample03">
+            <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Propietarios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Suministradores</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Cuenta</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Configuración</a></li>
+                  <li>
+                    <a class="dropdown-item" href="../../index.html"
+                      >Cerrar Sesión</a
+                    >
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <form role="search">
+              <input
+                class="form-control"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main></main>
-    <footer></footer>
+
+    <main>
+      <section class="grafico">
+        <section class="grafico__lineal">
+          <canvas
+            id="myChart"
+            aria-label="Hello ARIA World"
+            role="img"
+          ></canvas>
+        </section>
+      </section>
+      <section class="tabla">
+        <section class="tabla__botones">
+          <a href="./registrar_infraestructura.html"
+            >Registrar Infraestructura</a
+          >
+        </section>
+        <section class="tabla__grid">
+          <table>
+            <thead>
+              <tr>
+                <th class="tabla__grid--ID">ID</th>
+                <th class="tabla__grid--nombre">Nombre</th>
+                <th class="tabla__grid--municipio">Municipio</th>
+                <th class="tabla__grid--editar">Editar</th>
+              </tr>
+            </thead>
+            <tbody id="2023">
+              <tr>
+                <td class="tabla__grid--ID">1</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar">
+                  <a href="./actualizar_infraestructura.html"
+                    ><img
+                      src="../../public/images/edit_black.svg"
+                      alt=""
+                      srcset=""
+                  /></a>
+                </td>
+              </tr>
+              <tr>
+                <td class="tabla__grid--ID">2</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar">
+                  <a href="./actualizar_infraestructura.html"
+                    ><img
+                      src="../../public/images/edit_black.svg"
+                      alt=""
+                      srcset=""
+                  /></a>
+                </td>
+              </tr>
+              <tr>
+                <td class="tabla__grid--ID">3</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar">
+                  <a href="./actualizar_infraestructura.html"
+                    ><img
+                      src="../../public/images/edit_black.svg"
+                      alt=""
+                      srcset=""
+                  /></a>
+                </td>
+              </tr>
+              <tr>
+                <td class="tabla__grid--ID">4</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar">
+                  <a href="./actualizar_infraestructura.html"
+                    ><img
+                      src="../../public/images/edit_black.svg"
+                      alt=""
+                      srcset=""
+                  /></a>
+                </td>
+              </tr>
+              <tr>
+                <td class="tabla__grid--ID">5</td>
+                <td class="tabla__grid--nombre">La Electrolinera Durango</td>
+                <td class="tabla__grid--municipio">Alvaro Obregon</td>
+                <td class="tabla__grid--editar">
+                  <a href="./actualizar_infraestructura.html"
+                    ><img
+                      src="../../public/images/edit_black.svg"
+                      alt=""
+                      srcset=""
+                  /></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../js/dashboard.js"></script>
   </body>
 </html>
