--- a/src/css/personal_cre_desktop.css
+++ b/src/css/personal_cre_desktop.css
@@ -29,21 +29,52 @@ header {
   }
 }
 
+.modal-dialog{
+  padding-bottom: 5rem;
+  font-size: 1.6rem;
+  /* font-weight: 500; */
+  /* font-family: var(--font-montserrat); */
+
+  .custom-title{
+    font-size: 1.8rem !important;
+    /* font-weight: 600; */
+  }
+
+  button{
+    margin-left: 2rem;
+    font-size: 1.6rem !important;
+    font-weight: 600;
+  }
+
+  .borrarEstacion{
+    background-color: #ff6384 !important;
+    color: var(--color-blanco);
+    border: 0.2rem solid #ff6384 !important;
+  }
+
+  .borrarEstacion:hover{
+    background-color: var(--color-blanco) !important;
+    color: #ff6384;
+  }
+}
 main {
   /* background-color: var(--color-gris-background); */
-  height: 200rem;
   width: 100vw;
+  height: 200rem;
   .grafico {
     display: flex;
     width: 80vw;
+    justify-content: center;
     margin-top: 4rem;
     margin-left: auto;
     margin-right: auto;
+    align-items: center;
+    align-content: center;
     .grafico__lineal {
-      width: 50%;
+      width: 70%;
     }
     .grafico__dona {
-      width: 20%;
+      width: 30%;
     }
   }
   .tabla {
@@ -146,7 +177,7 @@ main {
             align-content: center;
           }
           .tabla__grid--municipio {
-            width: 20%;
+            width: 15%;
             align-content: center;
           }
           .tabla__grid--estatus {
@@ -154,7 +185,7 @@ main {
             align-content: center;
           }
           .tabla__grid--ubicacion {
-            width: 5%;
+            width: 10%;
             align-content: center;
             img {
               cursor: pointer;
